# hackseverstal

./: README.md
analytics/: data_view.ipynb  severstal.ipynb
backend/: .byebug_history  .gitignore  .rubocop.yml  Gemfile  README.md  package.json
backend/app/controllers/: api_controller.rb  application_controller.rb
backend/app/helpers/: time_machine_helper.rb
backend/app/models/: aspirator.rb  controlled_parameter.rb  device_kind.rb  ds_file.rb  ds_file_datum.rb  issue_request.rb  play_machine_datum.rb  signal_kind.rb  signal_value.rb  sinter_machine.rb  value_kind.rb
backend/app/services/: chart_values_service.rb  create_signal_values_service.rb  import_signal_kind_service.rb  import_signal_values_from_file_service.rb  serialize_aspirator_service.rb  (+5 more)
backend/config/: application.rb  credentials.yml.enc  deploy.rb  puma.rb  routes.rb  sidekiq.yml
backend/data/: Маппинг сигналов (4).csv
backend/db/: schema.rb
backend/systemd/: lct-api.service  lct-sidekiq.service
front/: README.md  index.html  package-lock.json  package.json  quasar.config.js
front/src/: App.vue
predict-api/: .pre-commit-config.yaml  README.md  pyproject.toml
predict-api/deploy/: docker-compose.dev.yml  docker-compose.yml
predict-api/severstal_predict/: __init__.py  __main__.py  conftest.py  settings.py
predict-api/worker/: pyproject.toml
predict-api/worker/worker/: __init__.py  __main__.py  data_processing.py
predict-api/worker/worker/models/tf_model_2_best/: fingerprint.pb  keras_metadata.pb
predict-api/worker/worker/models/tf_model_2_best/variables/: variables.index
(+124 files in other folders)
